tests/paczka1/small_fuzzy/73621358.err
Error in line 5: ec90 A218 14,3
Error in line 7: ec90 A728 -2,2
Error in line 9: S866 A728 41,5
Error in line 12: Oyn A7g8 73,8
